# quantitative-research

./: .env.example  .gitignore  CLAUDE.md  README.md  analyze.py  backtest.py  book.py  collector.py  evaluate.py  features.py  model.py  pyproject.toml  sweep.py
cpp/: CMakeLists.txt  export_events.py
cpp/src/: book.cpp  book.hpp  main.cpp
cpp/tests/: test_book.cpp
scripts/: qr-collector.service  qr-collector.user.service
